BLE Lab 4.cydsn/CortexM0/ARM_GCC_484/Debug/BLE Lab 4-ARM_GCC_484-Debug-REBUILD.log
--------------- Rebuild Started: 11/02/2016 21:39:29 Project: BLE Lab 4, Configuration: ARM GCC 4.8.4 Debug ---------------
Deleting file ".\BLE Lab 4.cycdx"
Deleting file ".\BLE Lab 4.svd"
Deleting file ".\BLE Lab 4.rpt"
Deleting file ".\BLE Lab 4_timing.html"
cydsfit.exe -.appdatapath "C:\Users\Heidi\AppData\Local\Cypress Semiconductor\PSoC Creator\3.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\Heidi\Desktop\BLE Lab 4\BLE Lab 4.cydsn\BLE Lab 4.cyprj" -d CY8C4247LQI-BL483 -s "C:\Users\Heidi\Desktop\BLE Lab 4\BLE Lab 4.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -I.\Generated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_484\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\main.c -o .\CortexM0\ARM_GCC_484\Debug\main.o
.\main.c: In function 'InitializeSystem':
.\main.c:143:2: warning: implicit declaration of function 'CapSense_Start' [-Wimplicit-function-declaration]
  CapSense_Start();
  ^
.\main.c:144:2: warning: implicit declaration of function 'CapSense_InitializeAllBaselines' [-Wimplicit-function-declaration]
  CapSense_InitializeAllBaselines();
  ^
.\main.c: In function 'HandleCapSenseSlider':
.\main.c:171:2: warning: implicit declaration of function 'CapSense_UpdateEnabledBaselines' [-Wimplicit-function-declaration]
  CapSense_UpdateEnabledBaselines(); 
  ^
.\main.c:174:2: warning: implicit declaration of function 'CapSense_ScanEnabledWidgets' [-Wimplicit-function-declaration]
  CapSense_ScanEnabledWidgets();   
  ^
.\main.c:177:2: warning: implicit declaration of function 'CapSense_IsBusy' [-Wimplicit-function-declaration]
  while(CapSense_IsBusy());
  ^
.\main.c:180:2: warning: implicit declaration of function 'CapSense_GetCentroidPos' [-Wimplicit-function-declaration]
  sliderPosition = CapSense_GetCentroidPos(CapSense_LINEARSLIDER0__LS); 
  ^
.\main.c:180:43: error: 'CapSense_LINEARSLIDER0__LS' undeclared (first use in this function)
  sliderPosition = CapSense_GetCentroidPos(CapSense_LINEARSLIDER0__LS); 
                                           ^
.\main.c:180:43: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/02/2016 21:39:37 ---------------
